tests/baselines/reference/checkJsdocOptionalParamOrder.errors.txt
0.js(7,20): error TS1016: A required parameter cannot follow an optional parameter.


==== 0.js (1 errors) ====
    // @ts-check
    /**
     * @param {number} a
     * @param {number} [b]
     * @param {number} c
     */
    function foo(a, b, c) {}
                       ~
!!! error TS1016: A required parameter cannot follow an optional parameter.
    